--- a/07/bool/view/admin/templates/catelist.html
+++ b/07/bool/view/admin/templates/catelist.html
@@ -49,7 +49,7 @@
     <td width="24%" align="center">
       <a href="#">转移商品</a> |
       <a href="#">编辑</a> |
-      <a href="#" title="移除">移除</a>
+      <a href="catedel.php?cat_id=<?php echo $v['cat_id'];?>" title="移除">移除</a>
     </td>
   </tr>
   <?php } ?>
