--- a/07/bool/view/admin/styles/main.css
+++ b/07/bool/view/admin/styles/main.css
@@ -57,16 +57,16 @@ h1 .action-span a {
   border:1px solid #278296;
   border-right:2px solid #278296;
   border-bottom:2px solid #278296;
-  background:#DDEEF2 url(../view/admin/images/icon_add.gif) no-repeat 3px center;
-  *background:#DDEEF2 url(../view/admin/images/icon_add.gif) no-repeat 3px 3px;
+  background:#DDEEF2 url(../images/icon_add.gif) no-repeat 3px center;
+  *background:#DDEEF2 url(../images/icon_add.gif) no-repeat 3px 3px;
 }
 
 h1 .action-span a:hover {
   border:1px solid #5FA6B6;
   border-right:2px solid #5FA6B6;
   border-bottom:2px solid #5FA6B6;
-  background:#FFF url(../view/admin/images/icon_add.gif) no-repeat 3px center;
-  *background:#FFF url(../view/admin/images/icon_add.gif) no-repeat 3px 3px;
+  background:#FFF url(../images/icon_add.gif) no-repeat 3px center;
+  *background:#FFF url(../images/icon_add.gif) no-repeat 3px 3px;
   color:#666;
   text-decoration:none;
 }
@@ -130,7 +130,7 @@ h1 .action-span1 {
 
 .list-div th {
   line-height: 24px;
-  background: #BBDDE5 url("../view/admin/images/th_bg.gif") repeat-x;
+  background: #BBDDE5 url("../images/th_bg.gif") repeat-x;
   white-space: nowrap;
 }
 
@@ -300,7 +300,7 @@ input.button {
   padding: 2px 8px 0px;
   margin: 2px 2px;
   border: 1px solid #2D5082;
-  background: url(../view/admin/images/button_bg.gif) repeat-x;
+  background: url(../images/button_bg.gif) repeat-x;
 }
 
 input.capital {
@@ -332,7 +332,7 @@ ul.msg-link {
 }
 
 ul.msg-link li {
-  background: url(../view/admin/images/arrow.gif) no-repeat 0px 6px;
+  background: url(../images/arrow.gif) no-repeat 0px 6px;
   padding-left:   18px;
   margin-left:  0;
 }
@@ -348,15 +348,15 @@ li.warning {
   margin-bottom: 5px;
 }
 
-#Marquee{
-  height:20px;
-  overflow:hidden;
+#Marquee{ 
+  height:20px; 
+  overflow:hidden;  
   border: 1px solid #CC0000;
   background: #FFFFCC;
   margin-bottom: 5px;
 }
-
-#Marquee div{
+  
+#Marquee div{ 
   background: #FFFFCC;
   padding: 10px;
   margin-bottom: 5px;
@@ -456,7 +456,7 @@ div#popMsg {
   line-height: 23px;
   color: #fff;
   font-size: 12px;
-  background: #D8D9DF url(../view/admin/images/icon_title.gif) no-repeat 10px center;
+  background: #D8D9DF url(../images/icon_title.gif) no-repeat 10px center;
   height: 23px;
   padding-left: 28px;
   margin: 0;
@@ -511,7 +511,7 @@ div#popMsg {
   bottom: 3px;
   width: 14px;
   height: 14px;
-  background:url(../view/admin/images/btn_drop.gif) no-repeat center;
+  background:url(../images/btn_drop.gif) no-repeat center;
 }
 
 .todolist-box .button
@@ -557,18 +557,18 @@ div#popMsg {
 }
 
 .step1 {
-  background:#FFF url(../view/admin/images/stepnum.gif) no-repeat 20px 20px;
-  *background:#FFF url(../view/admin/images/stepnum.gif) no-repeat 20px 17px;
+  background:#FFF url(../images/stepnum.gif) no-repeat 20px 20px;
+  *background:#FFF url(../images/stepnum.gif) no-repeat 20px 17px;
 }
 
 .step2 {
-  background:#FFF url(../view/admin/images/stepnum.gif) no-repeat 20px -80px;
-  *background:#FFF url(../view/admin/images/stepnum.gif) no-repeat 20px -83px;
+  background:#FFF url(../images/stepnum.gif) no-repeat 20px -80px;
+  *background:#FFF url(../images/stepnum.gif) no-repeat 20px -83px;
 }
 
 .step3 {
-  background:#FFF url(../view/admin/images/stepnum.gif) no-repeat 20px -180px;
-  *background:#FFF url(../view/admin/images/stepnum.gif) no-repeat 20px -183px;
+  background:#FFF url(../images/stepnum.gif) no-repeat 20px -180px;
+  *background:#FFF url(../images/stepnum.gif) no-repeat 20px -183px;
 }
 
 .step1 em, .step2 em, .step3 em{
@@ -700,13 +700,13 @@ em, cite, th {
   display:block;
   padding-left:50px;
   line-height:30px;
-  background:url(../view/admin/images/filecheck.gif) no-repeat -260px -50px;
+  background:url(../images/filecheck.gif) no-repeat -260px -50px;
   font-weight:700;
   font-size:14px;
   color:#2366A8;
 }
 .left .ofolder{
-  background:url(../view/admin/images/filecheck.gif) no-repeat -260px -100px;
+  background:url(../images/filecheck.gif) no-repeat -260px -100px;
   color:#2366A8;
   font-size:14px;
 }
@@ -715,34 +715,34 @@ em, cite, th {
 }
 .files{
   padding:1px 0 1px 50px;
-  background:url(../view/admin/images/filecheck.gif) no-repeat -260px -150px;
+  background:url(../images/filecheck.gif) no-repeat -260px -150px;
 }
 .del{
   padding-left:18px;
-  background:url(../view/admin/images/filecheck.gif) no-repeat 0 -285px;
-  *background:url(../view/admin/images/filecheck.gif) no-repeat 0 -286px;
+  background:url(../images/filecheck.gif) no-repeat 0 -285px;
+  *background:url(../images/filecheck.gif) no-repeat 0 -286px;
   color:#E8594D;
 }
 .edited{
   padding-left:18px;
-  background:url(../view/admin/images/filecheck.gif) no-repeat -100px -385px;
-  *background:url(../view/admin/images/filecheck.gif) no-repeat -100px -386px;
+  background:url(../images/filecheck.gif) no-repeat -100px -385px;
+  *background:url(../images/filecheck.gif) no-repeat -100px -386px;
   color:#E8594D;
 }
 .unknown{
   padding-left:18px;
-  background:url(../view/admin/images/filecheck.gif) no-repeat -50px -435px;
-  *background:url(../view/admin/images/filecheck.gif) no-repeat -50px -436px;
+  background:url(../images/filecheck.gif) no-repeat -50px -435px;
+  *background:url(../images/filecheck.gif) no-repeat -50px -436px;
   color:#6189B8;
 }
 .correct{
   padding-left:18px;
-  background:url(../view/admin/images/filecheck.gif) no-repeat 0 -485px;
-  *background:url(../view/admin/images/filecheck.gif) no-repeat 0 -486px;
+  background:url(../images/filecheck.gif) no-repeat 0 -485px;
+  *background:url(../images/filecheck.gif) no-repeat 0 -486px;
   color:#70B759;
 }
 .tb2 th, .tb2 td {
-  background:transparent url(../view/admin/images/bg_repx.gif) repeat-x scroll 0 bottom;
+  background:transparent url(../images/bg_repx.gif) repeat-x scroll 0 bottom;
   padding:5px 5px 5px 0;
   text-align:left;
 }
