--- a/07/bool/view/admin/templates/catelist.html
+++ b/07/bool/view/admin/templates/catelist.html
@@ -31,32 +31,27 @@
     <th>操作</th>
   </tr>
 
-  <?php foreach($catelist as $v) { ?>
-    <tr align="center" class="0" id="0_1" id = 'tr_2'>
+    <?php foreach($catlist as $v) { ?>
+    <tr align="center" class="0" id="0_1" id = 'tr_4'>
     <td align="left" class="first-cell" style = 'padding-left="1"'>
-            <img src="../view/admin/images/menu_minus.gif" id="icon_0_1" width="9" height="9"
-            border="0" style="margin-left:<?php echo $v['lev']; ?>em" />
+            <img src="../view/admin/images/menu_minus.gif" id="icon_0_1" width="9" height="9" border="0" style="margin-left:<?php echo $v['lev']; ?>em" />
 
             <span><a href="#" ><?php echo $v['cat_name']; ?></a></span>
         </td>
     <td width="10%">0</td>
     <td width="10%"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span></td>
-    <td width="10%"><img src="../view/admin/images/no.gif" /></td>
+    <td width="10%"><img src="../view/admin/images/yes.gif" /></td>
     <td width="10%"><img src="../view/admin/images/yes.gif" /></td>
     <td><span>0</span></td>
 
     <td width="10%" align="right"><span>50</span></td>
     <td width="24%" align="center">
       <a href="#">转移商品</a> |
-      <a href="#">编辑</a> |
-      <a href="catedel.php?cat_id=<?php echo $v['cat_id'];?>"
-         onclick= "if(!confirm('确实要删除吗？！')){return false;}"
-        title="移除">移除</a>
+      <a href="catedit.php?cat_id=<?php echo $v['cat_id'];?>">编辑</a> |
+      <a href="catedel.php?cat_id=<?php echo $v['cat_id'];?>" onclick="if(!confirm('确实要删除吗?')){return false;};" title="移除">移除</a>
     </td>
   </tr>
-  <?php } ?>
-
-
+    <?php } ?>
   </table>
 </div>
 </form>
