删除栏目下还有子栏目的情况，编辑时，将子栏目选为父栏目的情况

--- a/07/bool/view/admin/templates/cateadd.html
+++ b/07/bool/view/admin/templates/cateadd.html
@@ -10,8 +10,8 @@
 <body>
 
 <h1>
-<span class="action-span"><a href="catelist.html">商品分类</a></span>
-<span class="action-span1"><a href="#">ECSHOP 管理中心</a> </span><span id="search_id" class="action-span1"> - 添加分类 </span>
+<span class="action-span"><a href="catelist.php">商品分类</a></span>
+<span class="action-span1"><a href="index.php">ECSHOP 管理中心</a> </span><span id="search_id" class="action-span1"> - 添加分类 </span>
 <div style="clear:both"></div>
 </h1>
 
