--- a/07/bool/view/admin/templates/left.html
+++ b/07/bool/view/admin/templates/left.html
@@ -121,7 +121,7 @@ body {
 <ul>
   <li class="explode" key="02_cat_and_goods" name="menu">
     商品管理        <ul>
-          <li class="menu-item"><a href="goodslist.html" target="main-frame">商品列表</a></li>
+          <li class="menu-item"><a href="goodslist.php" target="main-frame">商品列表</a></li>
           <li class="menu-item"><a href="goodsadd.php" target="main-frame">添加新商品</a></li>
 
           <li class="menu-item"><a href="catelist.php" target="main-frame">商品分类</a></li>
