--- a/07/bool/view/admin/templates/goodslist.html
+++ b/07/bool/view/admin/templates/goodslist.html
@@ -78,7 +78,7 @@
       <a href="goods.php?goods_id=<?php echo $g['goods_id'];?>" target="_blank" title="查看"><img src="../view/admin/images/icon_view.gif" width="16" height="16" border="0" /></a>
       <a href="#" title="编辑"><img src="../view/admin/images/icon_edit.gif" width="16" height="16" border="0" /></a>
       <a href="#" title="复制"><img src="../view/admin/images/icon_copy.gif" width="16" height="16" border="0" /></a>
-      <a href="#"  title="回收站"><img src="../view/admin/images/icon_trash.gif" width="16" height="16" border="0" /></a>
+      <a href="goodstrash.php?goods_id=<?php echo $g['goods_id'];?>"  title="回收站"><img src="../view/admin/images/icon_trash.gif" width="16" height="16" border="0" /></a>
       <a href="#" title="货品列表"><img src="../view/admin/images/icon_docs.gif" width="16" height="16" border="0" /></a>          </td>
   </tr>
   <?php } ?>
