--- a/07/bool/view/admin/templates/left.html
+++ b/07/bool/view/admin/templates/left.html
@@ -123,8 +123,11 @@ body {
     商品管理        <ul>
           <li class="menu-item"><a href="goodslist.php" target="main-frame">商品列表</a></li>
           <li class="menu-item"><a href="goodsadd.php" target="main-frame">添加新商品</a></li>
+            <li class="menu-item"><a href="goodstrash.php?act=show" target="main-frame">商品回收站</a></li>
 
           <li class="menu-item"><a href="catelist.php" target="main-frame">商品分类</a></li>
+
+
         </ul>
       </li>
 
@@ -138,6 +141,7 @@ body {
           <li class="menu-item"><a href="#" target="main-frame">会员列表</a></li>
         </ul>
       </li>
+
 
 </ul>
 </div>
