--- a/07/bool/view/admin/templates/goodsadd.html
+++ b/07/bool/view/admin/templates/goodsadd.html
@@ -23,7 +23,7 @@ function charea(a) {
 <body>
 
 <h1>
-<span class="action-span"><a href="goods.php?act=list">商品列表</a></span>
+<span class="action-span"><a href="goodslist.php?act=list">商品列表</a></span>
 <span class="action-span1"><a href="index.php?act=main">ECSHOP 管理中心</a> </span><span id="search_id" class="action-span1"> - 添加新商品 </span>
 <div style="clear:both"></div>
 </h1>
