--- a/07/bool/view/admin/templates/goodslist.html
+++ b/07/bool/view/admin/templates/goodslist.html
@@ -10,7 +10,7 @@
 <body>
 
 <h1>
-<span class="action-span"><a href="goodsadd.html">添加新商品</a></span>
+<span class="action-span"><a href="goodsadd.php">添加新商品</a></span>
 <span class="action-span1"><a href="#">ECSHOP 管理中心</a> </span><span id="search_id" class="action-span1"> - 商品列表 </span>
 <div style="clear:both"></div>
 </h1>
