--- a/07/bool/view/admin/templates/catelist.html
+++ b/07/bool/view/admin/templates/catelist.html
@@ -12,7 +12,7 @@
 
 <h1>
 <span class="action-span"><a href="cateadd.php">添加分类</a></span>
-<span class="action-span1"><a href="index.php">ECSHOP 管理中心</a> </span><span id="search_id" class="action-span1"> - 商品分类 </span>
+<span class="action-span1"><a href="#">ECSHOP 管理中心</a> </span><span id="search_id" class="action-span1"> - 商品分类 </span>
 <div style="clear:both"></div>
 </h1>
 <form method="post" action="" name="listForm">
