--- a/07/bool/view/admin/templates/goodsadd.html
+++ b/07/bool/view/admin/templates/goodsadd.html
@@ -16,14 +16,14 @@ function charea(a) {
         o.className = o.id==a+'-tab'?'tab-front':'tab-back';
         tb.style.display = tb.id==a+'-table'?'block':'none';
     }
-
+    
 }
 </script>
 </head>
 <body>
 
 <h1>
-<span class="action-span"><a href="goodslist.php?act=list">商品列表</a></span>
+<span class="action-span"><a href="goods.php?act=list">商品列表</a></span>
 <span class="action-span1"><a href="index.php?act=main">ECSHOP 管理中心</a> </span><span id="search_id" class="action-span1"> - 添加新商品 </span>
 <div style="clear:both"></div>
 </h1>
@@ -59,18 +59,24 @@ function charea(a) {
           </tr>
           <tr>
             <td class="label">商品分类：</td>
-            <td><select name="cat_id"  ><option value="0">请选择...</option><option value="6" >手机配件</option><option value="11" >&nbsp;&nbsp;&nbsp;&nbsp;读卡器和内存卡</option><option value="7" >&nbsp;&nbsp;&nbsp;&nbsp;充电器</option><option value="8" >&nbsp;&nbsp;&nbsp;&nbsp;耳机</option><option value="9" >&nbsp;&nbsp;&nbsp;&nbsp;电池</option><option value="1" >手机类型</option><option value="3" >&nbsp;&nbsp;&nbsp;&nbsp;GSM手机</option><option value="4" >&nbsp;&nbsp;&nbsp;&nbsp;3G手机</option><option value="5" >&nbsp;&nbsp;&nbsp;&nbsp;双模手机</option><option value="2" >&nbsp;&nbsp;&nbsp;&nbsp;CDMA手机</option><option value="12" >充值卡</option><option value="14" >&nbsp;&nbsp;&nbsp;&nbsp;移动手机充值卡</option><option value="15" >&nbsp;&nbsp;&nbsp;&nbsp;联通手机充值卡</option><option value="13" >&nbsp;&nbsp;&nbsp;&nbsp;小灵通/固话充值卡</option></select>
+            <td><select name="cat_id"  >
+                <option value="0">请选择...</option>
+                        <?php foreach($catlist as $v) { ?>
+                        <option value="<?php echo $v['cat_id']; ?>">
+                        <?php echo str_repeat('&nbsp;&nbsp;',$v['lev']),$v['cat_name']; ?></option>
+                        <?php } ?>
+            </select>
              </td>
           </tr>
-          <tr>
+                   <tr>
             <td class="label">本店售价：</td>
             <td><input type="text" name="shop_price" value="0" size="20" /></td>
           </tr>
-          <tr>
+                   <tr>
             <td class="label">市场售价：</td>
             <td><input type="text" name="market_price" value="0" size="20" /></td>
           </tr>
-
+          
           <tr>
             <td class="label">上传商品图片：</td>
             <td>
@@ -121,7 +127,7 @@ function charea(a) {
           </tr>
         </table>
 
-
+  
         <div class="button-div">
           <input type="hidden" name="goods_id" value="0" />
                     <input type="submit" value=" 确定 " class="button" />
