--- a/07/bool/view/admin/templates/left.html
+++ b/07/bool/view/admin/templates/left.html
@@ -123,11 +123,8 @@ body {
     商品管理        <ul>
           <li class="menu-item"><a href="goodslist.php" target="main-frame">商品列表</a></li>
           <li class="menu-item"><a href="goodsadd.php" target="main-frame">添加新商品</a></li>
-            <li class="menu-item"><a href="goodstrash.php?act=show" target="main-frame">商品回收站</a></li>
 
           <li class="menu-item"><a href="catelist.php" target="main-frame">商品分类</a></li>
-
-
         </ul>
       </li>
 
@@ -141,8 +138,11 @@ body {
           <li class="menu-item"><a href="#" target="main-frame">会员列表</a></li>
         </ul>
       </li>
-
-
+  <li class="explode" key="04_order" name="menu">
+    商品回收站        <ul>
+          <li class="menu-item"><a href="goodstrash.php?act=show" target="main-frame">回收商品</a></li>
+        </ul>
+      </li>
 </ul>
 </div>
 <div id="help-div" style="display:none">
