--- a/07/bool/view/front/denglu.html
+++ b/07/bool/view/front/denglu.html
@@ -161,7 +161,7 @@
   <div class="usBox_1 f_l">
    <div class="logtitle"></div>
    <div style="color:#999; padding:30px 20px 10px 30px;">已注册用户请从这里登录</div>
-   <form onsubmit="return userLogin()" method="post" action="./images/denglu.htm" name="formLogin">
+   <form onsubmit="return userLogin()" method="post" action="login.php" name="formLogin">
         <table width="100%" cellspacing="5" cellpadding="3" border="0" align="left" class="user_table">
           <tbody><tr>
             <td width="15%" align="right">用户名</td>
@@ -170,19 +170,18 @@
           <tr>
             <td align="right">密码</td>
             <td>
-            <input type="password" class="inputBg" name="password">
+            <input type="password" class="inputBg" name="passwd">
             </td>
           </tr>
                     <tr>
-            <td colspan="2"><input type="checkbox" id="remember" name="remember" value="1"><label for="remember">请保存我这次的登录信息。</label></td>
+            <td colspan="2"><input type="checkbox" id="remember" name="remember" value="1"><label for="remember">记住用户名</label></td>
           </tr>
           <tr>
             <td>&nbsp;</td>
             <td align="left">
             <input type="hidden" value="act_login" name="act">
-            <input type="hidden" value="http://www.zhongyis.com/category.php?id=17" name="back_act">
-            <input type="submit" class="us_Submit" value="" name="submit">
-			<a name="fastlogin" href="#"><img width="115" height="25" src="./view/front/images/alipayLogin_new.png"></a>
+            <input type="submit" class="us_Submit" value="登陆" name="submit">
+			
             </td>
           </tr>
 	  <tr><td></td>
