--- a/07/bool/view/front/index.html
+++ b/07/bool/view/front/index.html
@@ -14,8 +14,19 @@
     	<div class="logo f_l"><a href="#"><img src="./view/front/images/logo.gif"></a></div>
         <div class="member_login f_l">
         <font id="ECS_MEMBERZONE"><div id="append_parent"></div>
+
+ <?php 
+ session_start();
+ if(!isset($_SESSION['username'])){  ?>      
  欢迎光临中意斯！&nbsp;&nbsp;&nbsp;&nbsp;
- <a href="#">登录</a> | <a href="#">注册</a>
+ <a href="login.php">登录</a> | <a href="reg.php">注册</a>
+
+<?php } else { ?>
+ 您好，<font class="f_orange_bold"><?php echo$_SESSION['username'] ?></font>, 欢迎您回来！
+<a href="#">用户中心</a>|
+ <a href="logout.php">退出</a>
+<?php } ?>
+
  </font>            
             </div>
         <div class="page_top f_r">
