--- a/07/bool/view/front/index.html
+++ b/07/bool/view/front/index.html
@@ -1,3 +1,6 @@
+<?php
+ session_start();
+?>
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta content="ECSHOP v2.7.2" name="Generator">
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -16,6 +19,7 @@
         <font id="ECS_MEMBERZONE"><div id="append_parent"></div>
 
  <?php
+
  if(!isset($_SESSION['username'])){  ?>
  欢迎光临中意斯！&nbsp;&nbsp;&nbsp;&nbsp;
  <a href="login.php">登录</a> | <a href="reg.php">注册</a>
